frontend/tests/cases/positive/exceptions/exceptions.gr
main : Int <Pure>
main = try throw as [x] in pure x catch pure 42