frontend/tests/cases/negative/letdiaLinearity.gr
foo : Int <>
foo = let x <- pure 42 in pure 50
